basic gradle script